# Hunspell-android

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/fitmind/hunsspell/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hunspell_jni.cpp
app/src/main/cpp/hunspell/: hunzip.cxx
app/src/main/java/com/fitmind/hunsspell/: MainActivity.kt
app/src/main/java/com/fitmind/hunsspell/Utils/: HunspellLibraryUtils.kt  SpellChecker.kt
app/src/main/java/com/fitmind/hunsspell/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/fitmind/hunsspell/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
